--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "event-listener-resize",
-  "version": "0.0.3",
+  "name": "eventlistener-resize",
+  "version": "0.0.2",
   "description": "A tiny library to add/remove listeners on Element resize",
   "main": "dist/index.js",
   "source": "src/index.js",
@@ -29,10 +29,10 @@
   "author": "Jon Quach <hello@jonquach.com> (https://jonquach.com)",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/itsjonq/event-listener-resize.git"
+    "url": "git+https://github.com/itsjonq/eventlistener-resize.git"
   },
   "bugs": {
-    "url": "https://github.com/itsjonq/event-listener-resize/issues"
+    "url": "https://github.com/itsjonq/eventlistener-resize/issues"
   },
   "license": "MIT",
   "keywords": [
