--- a/package.json
+++ b/package.json
@@ -56,17 +56,18 @@
   "devDependencies": {
     "@helpscout/prestart": "0.0.9",
     "@helpscout/zero": "0.0.10",
+    "@storybook/addon-actions": "^4.0.12",
+    "@storybook/addon-links": "^4.0.12",
+    "@storybook/addons": "^4.0.12",
+    "@storybook/react": "^4.0.12",
     "babel-core": "6.26.3",
+    "babel-loader": "^7.1.5",
+    "coveralls": "3.0.2",
     "microbundle": "0.8.3",
     "np": "3.0.4",
     "nyc": "13.1.0",
     "react": "16.6.3",
-    "react-dom": "16.6.3",
-    "@storybook/react": "^4.0.12",
-    "@storybook/addon-actions": "^4.0.12",
-    "@storybook/addon-links": "^4.0.12",
-    "@storybook/addons": "^4.0.12",
-    "babel-loader": "^7.1.5"
+    "react-dom": "16.6.3"
   },
   "dependencies": {}
 }
