--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - "8"
+  - '8'
 
 cache:
   directories:
@@ -14,7 +14,7 @@ script:
   - npm run build
 
 after_success:
-  # - npm run coverage
+  - npm run coverage
 
 branches:
   only:
